--- a/README
+++ b/README
@@ -2,9 +2,9 @@ source .env
 
 ts-node telegram/bot.ts
 
-npx ts-node scripts/createBet.ts  
-npx ts-node scripts/getActiveBets.ts
-npx ts-node scripts/placeBet.ts 1 true 0.002
+npx ts-node scripts/createMarket.ts  
+npx ts-node scripts/getActiveMarkets.ts
+npx ts-node scripts/placeBet.ts 2 true 0.002
 
 npx ts-node scripts/getAllBets.ts
 npx ts-node scripts/requestSettlement.ts
